# SpendWise-Agent

./: .env.example  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py
app/agents/: spendwise_agent.py
app/agents/prompts/: system_prompt.md
app/agents/tools/: analysis_tools.py  transaction_tools.py
app/api/routes/: budgets.py  categories.py  chat.py  insights.py  transactions.py
app/core/: config.py
app/db/: init_db.py  session.py
app/models/: __init__.py  budget.py  category.py  transaction.py
app/schemas/: budget.py  category.py  chat.py  insight.py  transaction.py
app/services/: analysis_service.py  budget_service.py  categorization_service.py  report_service.py  transaction_service.py
docs/: architecture.md
tests/: test_services.py
